@@ -4,6 +4,7 @@
 export JAVA_HOME=/Library/Java/JavaVirtualMachines/zulu-24.jdk/Contents/Home
 cd `dirname $0`/../Resources
 java -Dapple.laf.useScreenMenuBar=true -Xdock:name="Laurel Book Database" -Xdock:icon=book_case.icns \
+     -XX:+UseZGC \
      -Dcom.apple.mrj.application.live-resize=true \
      --enable-native-access=ALL-UNNAMED \
      -Dlbdb.environment=production \
